second step complete

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="assets/checkbox.png" alt="" />
                 <span class="font-bold text-2xl">23</span>
               </button>
-              <button class="btn btn-circle p-2 bg-[#F4F7FF]">
+              <button id="btn-theam" class="btn btn-circle p-2 bg-[#F4F7FF]">
                 <img src="assets/theme-btn.png" alt="" />
               </button>
             </ul>
@@ -208,5 +208,6 @@
       </main>
     </section>
     <script src="./script/toggle.js"></script>
+    <script src="./script/theam-change.js"></script>
   </body>
 </html>
