complete all task

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </div>
               <div>
                 <h6>Task Assigned </h6>
-                <h2 class="text-3xl font-extrabold">0<span id="assigned-number">6</span></h2>
+                <h2 class="text-3xl font-extrabold"><span id="assigned-number">6</span></h2>
               </div>
             </div>
             <div id="btn-other-page"
