--- a/blogs.html
+++ b/blogs.html
@@ -29,7 +29,7 @@
     <section class="md:container mx-auto p-4">
         <div class="navbar bg-white rounded-lg">
             <div class="flex-1 gap-2">
-                <img src="../assets/logo.png" alt="" />
+                <img src="./assets/logo.png" alt="" />
                 <h1 class="text-3xl">Dev<span class="font-bold">Board</span></h1>
               </div>
               <button id="btn-home-page" class="btn btn-primary">
@@ -67,6 +67,6 @@
             </p>
         </div>
     </section>
-    <script src="../script/home.js"></script>
+    <script src="./script/home.js"></script>
   </body>
 </html>
